--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markov-pupper",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "descritption": "Discord bot",
   "repository": {
     "type": "git",
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "discord.js": "^11.1.0",
+    "discord.js": "^11.2.1",
     "ffmpeg-binaries": "^3.2.2-3",
+    "node-opus": "^0.2.7",
     "querystring": "0.2.x",
     "snekfetch": "3.5.7",
     "wikijs": "^0.1.4"
