--- a/example_config.json
+++ b/example_config.json
@@ -1,5 +1,6 @@
 { 
     "token" : "bot token if using a bot account",
     "command_prefix" : "!",
-    "owner_id" : "owner id"
+    "owner_id" : "owner id",
+    "game" : "game"
 }
